--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -12,21 +12,12 @@ on:
           - minor
           - major
 
-permissions:
-  contents: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20.x
+      - uses: actions/checkout@v4
 
       - uses: philipparndt/get-release-number@v2
         id: next
@@ -34,21 +25,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           releaseType: ${{ github.event.inputs.releaseType }}
 
-      - name: Update version
-        working-directory: app
-        env:
-          RELEASE_VERSION: ${{ steps.next.outputs.version }}
-        run: npm version $RELEASE_VERSION --allow-same-version
-
-      - name: Install
-        working-directory: app
-        shell: bash
-        run: npm install
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.19.4'
 
       - name: Build
         working-directory: app
-        shell: bash
-        run: npm run build
+        run: |
+          go build .
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -57,20 +41,20 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build docker container and push
         id: docker_build
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         env:
           RELEASE_VERSION: ${{ steps.next.outputs.version }}
         with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          context: ./app
+          file: ./app/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             pharndt/stormmqtt:latest
@@ -78,13 +62,13 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: ncipollo/release-action@v1
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_VERSION: ${{ steps.next.outputs.version }}
         with:
-          tag: ${{env.RELEASE_VERSION}}
-          name: ${{env.RELEASE_VERSION}}
+          tag_name: ${{env.RELEASE_VERSION}}
+          release_name: ${{env.RELEASE_VERSION}}
           body: |
             Docker tag: `pharndt/stormmqtt:${{env.RELEASE_VERSION}}`
 
